# dengue-severity-classification

./: .gitignore  README.md  conda_environment.yml  pyproject.toml  requirements_pip.txt
data_pickles/patient_info/: patient_info.pkl
results/: DecisionTreeClassifier_severities.csv  RandomForestClassifier_severities.csv
scripts/: baseline_model_functions.py  main_controller.py  main_controller_3.0.py
scripts/pipeline_blocks/: core_pipeline_function_wrappers.py  event_matching.py  feature_extraction.py  model_training.py  quality_analysis.py  quality_checking.py
scripts/utils/: filtering.py  helpers.py  pickle_functions.py  vital_quality_functions.py
