[tool.poetry]
name = "dengue-severity-classification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.12"
pandas = "1.4.1"
scikit-learn = "1.0.2"
matplotlib = "3.5.1"
black = "^24.3.0"
xgboost = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
